refactor layouts and strings - more consistent naming